# ScholarSight

./: .gitignore  README.md  package-lock.json
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  documents.py  health.py  ingest.py  probability.py  query.py  roadmap.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py  worker_engine.py
backend/app/db/migrations/: env.py
backend/app/services/: storage.py
backend/app/services/embedding/: bge_m3.py
backend/app/services/llm/: summarizer.py  synthesizer.py
backend/app/services/ocr/: __init__.py  base.py  deepseek_ocr.py  mistral_ocr.py  pageindex.py
backend/app/services/probability/: competitive_map.py  percentile_matcher.py
backend/app/services/retrieval/: context_retriever.py  semantic_search.py
backend/app/services/roadmap/: templates.py
backend/app/tasks/: __init__.py  celery_app.py  embedding_tasks.py  ocr_tasks.py  summarization_tasks.py
backend/tests/: __init__.py  test_health.py  test_probability.py
docker/: Dockerfile.backend  docker-compose.prod.yml  docker-compose.yml
frontend/: .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.build.json  vite.config.ts
plans/: fastgpt-ui-adaptation-plan-v2.md  fastgpt-ui-adaptation-plan-v3.md  fastgpt-ui-adaptation-plan.md  frontend-migration-plan.md  landing-page-plan.md  mvp-architecture-and-task-breakdown.md  showcase-refactor-plan.md
scripts/: add_documents_table.sql  (+4 more)
(+96 files in other folders)
